// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store (legacy) collapseNodesByDefault:false should not filter DOM nodes from the store tree: 1: mount 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▾ <div>
        ▾ <Parent>
          ▾ <div>
            ▾ <Child>
                <div>
      ▾ <Parent>
        ▾ <div>
          ▾ <Child>
              <div>
        <Nothing>
`;

exports[`Store (legacy) collapseNodesByDefault:false should not filter DOM nodes from the store tree: 2: update 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▾ <div>
        ▾ <Parent>
          ▾ <div>
            ▾ <Child>
                <div>
      ▾ <Parent>
        ▾ <div>
          ▾ <Child>
              <div>
        <Nothing>
`;

exports[`Store (legacy) collapseNodesByDefault:false should not filter DOM nodes from the store tree: 5: unmount 1`] = ``;

exports[`Store (legacy) collapseNodesByDefault:false should support adding and removing children: 1: mount 1`] = `
[root]
  ▾ <Root>
    ▾ <div>
      ▾ <Component key="a">
          <div>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support adding and removing children: 2: add child 1`] = `
[root]
  ▾ <Root>
    ▾ <div>
      ▾ <Component key="a">
          <div>
      ▾ <Component key="b">
          <div>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support adding and removing children: 3: remove child 1`] = `
[root]
  ▾ <Root>
    ▾ <div>
      ▾ <Component key="b">
          <div>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support collapsing parts of the tree: 1: mount 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▾ <Parent>
        ▾ <div>
          ▾ <Child key="0">
              <div>
          ▾ <Child key="1">
              <div>
      ▾ <Parent>
        ▾ <div>
          ▾ <Child key="0">
              <div>
          ▾ <Child key="1">
              <div>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support collapsing parts of the tree: 2: collapse first Parent 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▸ <Parent>
      ▾ <Parent>
        ▾ <div>
          ▾ <Child key="0">
              <div>
          ▾ <Child key="1">
              <div>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support collapsing parts of the tree: 3: collapse second Parent 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▸ <Parent>
      ▸ <Parent>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support collapsing parts of the tree: 4: expand first Parent 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▾ <Parent>
        ▾ <div>
          ▾ <Child key="0">
              <div>
          ▾ <Child key="1">
              <div>
      ▸ <Parent>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support collapsing parts of the tree: 5: collapse Grandparent 1`] = `
[root]
  ▸ <Grandparent>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support collapsing parts of the tree: 6: expand Grandparent 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▾ <Parent>
        ▾ <div>
          ▾ <Child key="0">
              <div>
          ▾ <Child key="1">
              <div>
      ▸ <Parent>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support mount and update operations for multiple roots: 1: mount 1`] = `
[root]
  ▾ <Parent key="A">
    ▾ <div>
      ▾ <Child key="0">
          <div>
      ▾ <Child key="1">
          <div>
      ▾ <Child key="2">
          <div>
[root]
  ▾ <Parent key="B">
    ▾ <div>
      ▾ <Child key="0">
          <div>
      ▾ <Child key="1">
          <div>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support mount and update operations for multiple roots: 2: update 1`] = `
[root]
  ▾ <Parent key="A">
    ▾ <div>
      ▾ <Child key="0">
          <div>
      ▾ <Child key="1">
          <div>
      ▾ <Child key="2">
          <div>
      ▾ <Child key="3">
          <div>
[root]
  ▾ <Parent key="B">
    ▾ <div>
      ▾ <Child key="0">
          <div>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support mount and update operations for multiple roots: 3: unmount B 1`] = `
[root]
  ▾ <Parent key="A">
    ▾ <div>
      ▾ <Child key="0">
          <div>
      ▾ <Child key="1">
          <div>
      ▾ <Child key="2">
          <div>
      ▾ <Child key="3">
          <div>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support mount and update operations for multiple roots: 4: unmount A 1`] = ``;

exports[`Store (legacy) collapseNodesByDefault:false should support mount and update operations: 1: mount 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▾ <Parent>
        ▾ <div>
          ▾ <Child key="0">
              <div>
          ▾ <Child key="1">
              <div>
          ▾ <Child key="2">
              <div>
          ▾ <Child key="3">
              <div>
      ▾ <Parent>
        ▾ <div>
          ▾ <Child key="0">
              <div>
          ▾ <Child key="1">
              <div>
          ▾ <Child key="2">
              <div>
          ▾ <Child key="3">
              <div>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support mount and update operations: 2: update 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▾ <Parent>
        ▾ <div>
          ▾ <Child key="0">
              <div>
          ▾ <Child key="1">
              <div>
      ▾ <Parent>
        ▾ <div>
          ▾ <Child key="0">
              <div>
          ▾ <Child key="1">
              <div>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support mount and update operations: 3: unmount 1`] = ``;

exports[`Store (legacy) collapseNodesByDefault:false should support reordering of children: 1: mount 1`] = `
[root]
  ▾ <Root>
    ▾ <div>
      ▾ <Foo key="foo">
        ▾ <div>
          ▾ <Component key="0">
              <div>
      ▾ <Bar key="bar">
        ▾ <div>
          ▾ <Component key="0">
              <div>
          ▾ <Component key="1">
              <div>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support reordering of children: 2: reorder children 1`] = `
[root]
  ▾ <Root>
    ▾ <div>
      ▾ <Bar key="bar">
        ▾ <div>
          ▾ <Component key="0">
              <div>
          ▾ <Component key="1">
              <div>
      ▾ <Foo key="foo">
        ▾ <div>
          ▾ <Component key="0">
              <div>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support reordering of children: 3: collapse root 1`] = `
[root]
  ▸ <Root>
`;

exports[`Store (legacy) collapseNodesByDefault:false should support reordering of children: 4: expand root 1`] = `
[root]
  ▾ <Root>
    ▾ <div>
      ▾ <Bar key="bar">
        ▾ <div>
          ▾ <Component key="0">
              <div>
          ▾ <Component key="1">
              <div>
      ▾ <Foo key="foo">
        ▾ <div>
          ▾ <Component key="0">
              <div>
`;

exports[`Store (legacy) collapseNodesByDefault:true should not filter DOM nodes from the store tree: 1: mount 1`] = `
[root]
  ▸ <Grandparent>
`;

exports[`Store (legacy) collapseNodesByDefault:true should not filter DOM nodes from the store tree: 2: expand Grandparent 1`] = `
[root]
  ▾ <Grandparent>
    ▸ <div>
`;

exports[`Store (legacy) collapseNodesByDefault:true should not filter DOM nodes from the store tree: 3: expand div 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▸ <div>
      ▸ <Parent>
        <Nothing>
`;

exports[`Store (legacy) collapseNodesByDefault:true should not filter DOM nodes from the store tree: 4: final update 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▸ <div>
      ▸ <Parent>
        <Nothing>
`;

exports[`Store (legacy) collapseNodesByDefault:true should not filter DOM nodes from the store tree: 5: unmount 1`] = ``;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding deep parts of the tree: 1: mount 1`] = `
[root]
  ▸ <Wrapper>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding deep parts of the tree: 2: expand deepest node 1`] = `
[root]
  ▾ <Wrapper>
    ▾ <Nested>
      ▾ <Nested>
        ▾ <Nested>
          ▾ <Nested>
              <div>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding deep parts of the tree: 3: collapse root 1`] = `
[root]
  ▸ <Wrapper>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding deep parts of the tree: 4: expand root 1`] = `
[root]
  ▾ <Wrapper>
    ▾ <Nested>
      ▾ <Nested>
        ▾ <Nested>
          ▾ <Nested>
              <div>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding deep parts of the tree: 5: collapse middle node 1`] = `
[root]
  ▾ <Wrapper>
    ▸ <Nested>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding deep parts of the tree: 6: expand middle node 1`] = `
[root]
  ▾ <Wrapper>
    ▾ <Nested>
      ▾ <Nested>
        ▾ <Nested>
          ▾ <Nested>
              <div>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding parts of the tree: 1: mount 1`] = `
[root]
  ▸ <Grandparent>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding parts of the tree: 2: expand Grandparent 1`] = `
[root]
  ▾ <Grandparent>
    ▸ <div>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding parts of the tree: 3: expand parent div 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▸ <Parent>
      ▸ <Parent>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding parts of the tree: 4: expand first Parent 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▾ <Parent>
        ▸ <div>
      ▸ <Parent>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding parts of the tree: 5: expand second Parent 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▾ <Parent>
        ▸ <div>
      ▾ <Parent>
        ▸ <div>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding parts of the tree: 6: collapse first Parent 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▸ <Parent>
      ▾ <Parent>
        ▸ <div>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding parts of the tree: 7: collapse second Parent 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <div>
      ▸ <Parent>
      ▸ <Parent>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support expanding parts of the tree: 8: collapse Grandparent 1`] = `
[root]
  ▸ <Grandparent>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support mount and update operations for multiple roots: 1: mount 1`] = `
[root]
  ▸ <Parent key="A">
[root]
  ▸ <Parent key="B">
`;

exports[`Store (legacy) collapseNodesByDefault:true should support mount and update operations for multiple roots: 2: update 1`] = `
[root]
  ▸ <Parent key="A">
[root]
  ▸ <Parent key="B">
`;

exports[`Store (legacy) collapseNodesByDefault:true should support mount and update operations for multiple roots: 3: unmount B 1`] = `
[root]
  ▸ <Parent key="A">
`;

exports[`Store (legacy) collapseNodesByDefault:true should support mount and update operations for multiple roots: 4: unmount A 1`] = ``;

exports[`Store (legacy) collapseNodesByDefault:true should support mount and update operations: 1: mount 1`] = `
[root]
  ▸ <div>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support mount and update operations: 2: update 1`] = `
[root]
  ▸ <div>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support mount and update operations: 3: unmount 1`] = ``;

exports[`Store (legacy) collapseNodesByDefault:true should support reordering of children: 1: mount 1`] = `
[root]
  ▸ <Root>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support reordering of children: 2: reorder children 1`] = `
[root]
  ▸ <Root>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support reordering of children: 3: expand root 1`] = `
[root]
  ▾ <Root>
    ▸ <div>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support reordering of children: 4: expand div 1`] = `
[root]
  ▾ <Root>
    ▾ <div>
      ▸ <Bar key="bar">
      ▸ <Foo key="foo">
`;

exports[`Store (legacy) collapseNodesByDefault:true should support reordering of children: 4: expand leaves 1`] = `
[root]
  ▾ <Root>
    ▾ <div>
      ▾ <Bar key="bar">
        ▸ <div>
      ▾ <Foo key="foo">
        ▸ <div>
`;

exports[`Store (legacy) collapseNodesByDefault:true should support reordering of children: 5: collapse root 1`] = `
[root]
  ▸ <Root>
`;

exports[`Store (legacy) should not allow a root node to be collapsed: 1: mount 1`] = `
[root]
  ▾ <Component>
      <div>
`;
